Add: Function to handle placement of random and random disposable images
New function to reuse code between functions for regular and random images;
New function to place random images, to place disposable images and move them to disposed directory;
Minor functions renaming.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ images/
 random_images/
 disposable_random_images/
 disposed_images/
+random_images2/
+disposable_random_images2/
+disposed_images2/
 input.pdf
 output.pdf
 images.json
